# Postienda

./: .gitignore  CMakeLists.txt  README.md  compile_mo.sh  create_po.sh  resources.rc  update_po.sh  update_pot.sh
constants/: CMakeLists.txt
constants/APPNAME/: APPNAME.cpp  APPNAME.h
constants/DB/: DB.cpp  DB.h
constants/FOLDERS/LOCALE/: LOCALE_FOLDER.cpp  LOCALE_FOLDER.hpp
constants/FOLDERS/SETTINGS/: SETTINGS_FOLDER.cpp  SETTINGS_FOLDER.hpp
constants/HASH/: HASH.cpp  HASH.hpp
constants/JSON/DarkMode/: DarkMode.cpp  DarkMode.h
constants/JSON/Language/: LanguageJson.cpp  LanguageJson.hpp
constants/JSON/Session/: Session.cpp  Session.h
constants/JSON/Ticket/: PRINTER_SETTINGS.cpp  PRINTER_SETTINGS.hpp
constants/MESSAGES_ADVICE/ERROR/DB/: DB_ERRORS.hpp
constants/MESSAGES_ADVICE/ERROR/PRINTING/: PRINTING_ERRORS.hpp
constants/MESSAGES_ADVICE/INFO/: NO_PRODUCT.hpp
constants/MESSAGES_ADVICE/WARNING/: ATENCION.hpp  WARNING_MESSAGES.hpp
constants/PASSWORD/: PASSWORD_FILE.cpp  PASSWORD_FILE.hpp
constants/RES/: RES_FOLDER_PATH.cpp  RES_FOLDER_PATH.hpp
constants/RES/ICON/: ICON_PATH.cpp  ICON_PATH.hpp
constants/TICKET/: TICKET_PATH.cpp  TICKET_PATH.hpp
gui/: CMakeLists.txt
gui/AskCreatePasswordFrame/: AskCreatePasswordFrame.cpp  AskCreatePasswordFrame.hpp  AskCreatePasswordFrame_Bindings.cpp  AskCreatePasswordFrame_UI.cpp
gui/AskEnterPasswordFrame/: AskEnterPasswordFrame.cpp  AskEnterPasswordFrame.hpp  AskEnterPasswordFrame_Bindings.cpp  AskEnterPasswordFrame_UI.cpp
gui/InfoProductsFrame/: InfoProductsFrame.cpp  InfoProductsFrame.hpp  InfoProductsFrame_Bindings.cpp  InfoProductsFrame_DB_Search.cpp  InfoProductsFrame_UI.cpp
gui/LanguageFrame/: LanguageFrame.cpp  LanguageFrame.hpp  LanguageFrame_Bindings.cpp  LanguageFrame_UI.cpp
gui/MainFrame/: MainFrame.cpp  MainFrame.h  MainFrame_Binds.cpp  MainFrame_PrintTicket_Canvas.cpp  MainFrame_PrintTicket_EscPos.cpp  MainFrame_UI.cpp  Purchase_Item.hpp
gui/MainFrame/logic/: MainFrame_DB.cpp  MainFrame_models.hpp
gui/PreviousPurchasesFrame/: PreviousPurchasesFrame.cpp  PreviousPurchasesFrame.hpp  PreviousPurchasesFrameUI.cpp  PreviousPurchasesFrame_Binds.cpp  PreviousPurchasesFrame_DB_Search.cpp
gui/PreviousPurchasesFrame/SpecificPurchaseInfoMenu/: SpecificPurchaseInfoMenu.cpp  SpecificPurchaseInfoMenu.hpp  SpecificPurchaseInfoMenu_Binds.cpp  SpecificPurchaseInfoMenu_DB.cpp  SpecificPurchaseInfoMenu_PrintTicket_Canvas.cpp  SpecificPurchaseInfoMenu_PrintTicket_EscPos.cpp  SpecificPurchaseInfoMenu_UI.cpp
gui/ProductosFrame/: ProductosFrame.cpp  ProductosFrame.h  ProductosFrame_Binds.cpp  ProductosFrame_Category.cpp  ProductosFrame_Change.cpp  ProductosFrame_Product.cpp  ProductosFrame_Stock.cpp  ProductosFrame_UI.cpp
gui/ProductosFrame/ChangeProductDialog/: ChangeProductDialog.cpp  ChangeProductDialog.h
gui/ProductosFrame/ProductoDialog/: ProductoDialog.cpp  ProductoDialog.h
gui/ProductosFrame/ProductosFrame_DB/: ProductosFrame_DB_Conect_Load.cpp  ProductosFrame_DB_Delete.cpp  ProductosFrame_DB_Insert.cpp  ProductosFrame_DB_Search.cpp  ProductosFrame_DB_Update.cpp  ProductosFrame_DB_Utils.cpp
gui/ProductosFrame/StockDialog/: StockDialog.cpp  StockDialog.hpp
gui/TicketFrame/: TicketFrame.cpp  TicketFrame.hpp
gui/TicketFrame/Canvas/: Canvas.cpp  Canvas.hpp  Canvas_Binds.cpp  Canvas_Draw.cpp
gui/TicketFrame/Canvas/InputTextModal/: InputTextModal.cpp  InputTextModal.hpp
gui/TicketFrame/PrintMenu/: PrintMenu.cpp  PrintMenu.hpp  PrintMenu_File.cpp
gui/TicketFrame/PrintMenu/Print/: EscPos.cpp
gui/TicketFrame/PrintMenu/Print/LinuxPrint/: LinuxPrint.cpp
gui/TicketFrame/PrintMenu/Print/WindowsPrint/: WindowsPrint.cpp
gui/TicketFrame/Utils_TicketFrame/: Utils_TicketFrame.cpp
gui/UsuariosFrame/: UsuariosFrame.cpp  UsuariosFrame.h  UsuariosFrame_DB.cpp  UsuariosFrame_Sesion.cpp
include/: CMakeLists.txt  models.hpp
locale/: messages.pot
locale/en/LC_MESSAGES/: messages.mo  messages.po
locale/es/LC_MESSAGES/: messages.mo  messages.po
locale/es_MX/LC_MESSAGES/: messages.mo  messages.po
print/: CMakeLists.txt  Print_Utils_Getters.hpp
print/Canvas/: Canvas_Utils.hpp
print/Canvas/CanvasItem/: CanvasItem.cpp  CanvasItem.hpp
print/EscPos/: EscPosDictionary.hpp  WxImageToEscPos.hpp
print/EscPos/LineStructure/: LineStructure.hpp
print/Linux/: Linux_Print_Functions.hpp
print/Windows/: Windows_Print_Functions_.hpp
src/: App.cpp  App.h
utils/: CMakeLists.txt  CreateFileFolder.hpp  DateTimeUtils.hpp  FuenteUtils.cpp  FuenteUtils.h  GetFromFile.h  MathUtils.hpp  ValidateStringInput.cpp  ValidateStringInput.h
utils/window/: WindowUtils.cpp  WindowUtils.h
